--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "synapse-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -8,6 +16,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
+    "nodemon": "^3.1.11",
     "socket.io": "^4.8.2"
   }
 }
